Bug 101188 - [Shadow] ShadowRoot type is not set correctly.
Summary: [Shadow] ShadowRoot type is not set correctly.
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: DOM (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Shinya Kawanaka
URL:
Keywords:
Depends on:
Blocks: 101170
  Show dependency treegraph
 
Reported: 2012-11-05 00:27 PST by Shinya Kawanaka
Modified: 2012-11-05 01:05 PST (History)
2 users (show)

See Also:


Attachments
Patch (6.40 KB, patch)
2012-11-05 00:33 PST, Shinya Kawanaka
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Shinya Kawanaka 2012-11-05 00:27:44 PST
A patch for Bug 101178 contains a bug that ShadowRootType is not set correctly.
Comment 1 Shinya Kawanaka 2012-11-05 00:33:21 PST
Created attachment 172283 [details]
Patch
Comment 2 WebKit Review Bot 2012-11-05 01:05:30 PST
Comment on attachment 172283 [details]
Patch

Clearing flags on attachment: 172283

Committed r133443: <http://trac.webkit.org/changeset/133443>
Comment 3 WebKit Review Bot 2012-11-05 01:05:34 PST
All reviewed patches have been landed.  Closing bug.