[Shadow] ShadowRoot type is not set correctly. https://bugs.webkit.org/show_bug.cgi?id=101188

Reviewed by Hajime Morita.

Source/WebCore:

ShadowRoot type is not set correctly in Release build. We have had to remove #ifndef block.

Test: fast/dom/shadow/shadowroot-type.html

* dom/ShadowRoot.cpp:
(WebCore::ShadowRoot::create):
* testing/Internals.cpp:
(WebCore::Internals::shadowRootType):
(WebCore):
* testing/Internals.h:
(Internals):
* testing/Internals.idl:

LayoutTests:

* fast/dom/shadow/shadowroot-type-expected.txt: Added.
* fast/dom/shadow/shadowroot-type.html: Added.


Canonical link: https://commits.webkit.org/119278@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133443 268f45cc-cd09-0410-ab3c-d52691b4dbfc